--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jup-ag/terminal": "^3.4.1",
+    "@jup-ag/wallet-adapter": "^0.2.1",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@solana/wallet-adapter-backpack": "^0.1.14",
+    "@solana/wallet-adapter-magiceden": "^0.1.13",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.8",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
