--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@jup-ag/terminal": "^3.4.1",
     "@jup-ag/wallet-adapter": "^0.2.1",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -20,7 +21,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
